tests/type_param_bounds/type_param_bounds.exp
Error ---------------------------------------------------------------------------------------- type_param_bounds.js:2:10

Cannot instantiate `X` because string [1] is incompatible with number [2] in type argument `T`. [incompatible-type-arg]

   type_param_bounds.js:2:10
   2| (true: X<string>);
               ^^^^^^ [1]

References:
   type_param_bounds.js:1:11
   1| type X<T: number> = boolean;
                ^^^^^^ [2]



Found 1 error
